--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,9 +1,9 @@
 main:
-  - title: :whale: "test Posts"
+  - title: :fish: "Posts"
     url: /posts/
-  - title: "Categories"
+  - title: :dolphin: "Categories"
     url: /categories/
-  - title: "Tags"
+  - title: :whale2: "Tags"
     url: /tags/
-  - title: "Me?"
+  - title: :whale: "Me?"
     url: /about/
