--- a/_config.yml
+++ b/_config.yml
@@ -68,9 +68,9 @@ author:
     - label: "colemanyu"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/colemanyu"
-    - label: "Twitter"
-      icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/"
+    - label: "X (~~Twitter~~)"
+      icon: "fab fa-fw fa-x-twitter"
+      url: "https://x.com/"
     - label: "LinkedIn"
       icon: "fab fa-fw fa-linkedin"
       url: "https://linkedin.com/"
