Add email and Google Scholar links to author section; update GitHub and X labels

--- a/_config.yml
+++ b/_config.yml
@@ -62,24 +62,31 @@ author:
   avatar : "/assets/images/bio-photo.jpeg"
   bio    : "I like marine animals."
   links:
+    - label: "Email"
+      icon: "fas fa-fw fa-envelope"
+      url: "mailto:colemancyu@gmail.com"
     - label: "colemanyu.net"
       icon: "fas fa-fw fa-link"
       url: "https://colemanyu.github.io"
-    - label: "colemanyu"
+    - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/colemanyu"
-    - label: "X (~~Twitter~~)"
-      icon: "fab fa-fw fa-x-twitter"
-      url: "https://x.com/"
     - label: "LinkedIn"
       icon: "fab fa-fw fa-linkedin"
       url: "https://linkedin.com/"
+    - label: "Google Scholar"
+      icon: "fas fa-fw fa-graduation-cap"
+      url: "https://scholar.google.com/"
+    - label: "X (<del>Twitter</del>)"
+      icon: "fab fa-fw fa-x-twitter"
+      url: "https://x.com/"
     - label: "Facebook"
       icon: "fab fa-fw fa-facebook"
       url: "https://facebook.com/"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
       url: "https://instagram.com/"
+
 
 footer:
   links:
