--- a/_config.yml
+++ b/_config.yml
@@ -65,6 +65,12 @@ author:
     - label: "Email"
       icon: "fas fa-fw fa-envelope"
       url: "mailto:colemancyu@gmail.com"
+    - label: "CV"
+      icon: "fas fa-fw fa-file-alt"
+      url: "/assets/cv.pdf"
+    - label: "Name Card"
+      icon: "fas fa-fw fa-id-card"
+      url: "/assets/name-card.pdf"
     - label: "colemanyu.net"
       icon: "fas fa-fw fa-link"
       url: "https://colemanyu.github.io"
@@ -80,12 +86,12 @@ author:
     - label: "X (<del>Twitter</del>)"
       icon: "fab fa-fw fa-x-twitter"
       url: "https://x.com/"
-    - label: "Facebook"
-      icon: "fab fa-fw fa-facebook"
-      url: "https://facebook.com/"
-    - label: "Instagram"
-      icon: "fab fa-fw fa-instagram"
-      url: "https://instagram.com/"
+    # - label: "Facebook"
+    #   icon: "fab fa-fw fa-facebook"
+    #   url: "https://facebook.com/"
+    # - label: "Instagram"
+    #   icon: "fab fa-fw fa-instagram"
+    #   url: "https://instagram.com/"
 
 
 footer:
