--- a/_config.yml
+++ b/_config.yml
@@ -83,9 +83,9 @@ author:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/colemanyu"
-    - label: "X (<del>Twitter</del>)"
-      icon: "fab fa-fw fa-x-twitter"
-      url: "https://x.com/"
+    # - label: "X (<del>Twitter</del>)"
+    #   icon: "fab fa-fw fa-x-twitter"
+    #   url: "https://x.com/"
     # - label: "Facebook"
     #   icon: "fab fa-fw fa-facebook"
     #   url: "https://facebook.com/"
