Move website url from sidebar to footer

--- a/_config.yml
+++ b/_config.yml
@@ -71,9 +71,9 @@ author:
     - label: "Name Card"
       icon: "fas fa-fw fa-id-card"
       url: "/assets/name-card.pdf"
-    - label: "colemanyu.net"
-      icon: "fas fa-fw fa-link"
-      url: "https://colemanyu.github.io"
+    # - label: "colemanyu.net"
+    #   icon: "fas fa-fw fa-link"
+    #   url: "https://colemanyu.github.io"
     - label: "LinkedIn"
       icon: "fab fa-fw fa-linkedin"
       url: "https://linkedin.com/"
