Update linkedin icon

--- a/_config.yml
+++ b/_config.yml
@@ -72,10 +72,10 @@ author:
       icon: "fas fa-fw fa-id-card"
       url: "/assets/name-card.pdf"
     - label: "LinkedIn"
-      icon: "fab fa-fw fa-linkedin"
+      icon: "fa-brands fa-square-linkedin"
       url: "https://www.linkedin.com/in/colemanyu"
     - label: "Google Scholar"
-      icon: "fas fa-fw fa-graduation-cap"
+      icon: "fa-brands fa-google-scholar"
       url: "https://scholar.google.com/"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
