--- a/_config.yml
+++ b/_config.yml
@@ -83,6 +83,9 @@ author:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/colemanyu"
+    - label: "YouTube"
+      icon: "fa-brands fa-square-youtube"
+      url: "https://www.youtube.com/"
 
 footer:
   links:
