--- a/_config.yml
+++ b/_config.yml
@@ -79,7 +79,10 @@ author:
       url: "https://www.linkedin.com/in/colemanyu"
     - label: "Google Scholar"
       icon: "fa-brands fa-google-scholar"
-      url: "https://scholar.google.com/"
+      url: "https://scholar.google.com/citations?user=r1ANweUAAAAJ"
+    - label: "ORCID"
+      icon: "fa-brands fa-orcid"
+      url: "https://orcid.org/0000-0002-9685-2237"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/colemanyu"
