Comment out CV and Name Card links in author section; add Gist link

--- a/_config.yml
+++ b/_config.yml
@@ -68,12 +68,12 @@ author:
     - label: "Email"
       icon: "fas fa-fw fa-envelope"
       url: "mailto:colemancyu@gmail.com"
-    - label: "CV"
-      icon: "fas fa-fw fa-file-alt"
-      url: "/assets/cv.pdf"
-    - label: "Name Card"
-      icon: "fas fa-fw fa-id-card"
-      url: "/assets/name-card.pdf"
+    # - label: "CV"
+    #   icon: "fas fa-fw fa-file-alt"
+    #   url: "/assets/cv.pdf"
+    # - label: "Name Card"
+    #   icon: "fas fa-fw fa-id-card"
+    #   url: "/assets/name-card.pdf"
     - label: "LinkedIn"
       icon: "fa-brands fa-square-linkedin"
       url: "https://www.linkedin.com/in/colemanyu"
@@ -86,9 +86,12 @@ author:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/colemanyu"
-    - label: "YouTube"
-      icon: "fa-brands fa-square-youtube"
-      url: "https://www.youtube.com/"
+    - label: "Gist"
+      icon: "fab fa-fw fa-github"
+      url: "https://gist.github.com/colemanyu"
+    # - label: "YouTube"
+    #   icon: "fa-brands fa-square-youtube"
+    #   url: "https://www.youtube.com/"
 
 footer:
   links:
